--- a/styles/main.css
+++ b/styles/main.css
@@ -4,10 +4,12 @@
 			box-sizing: border-box;
 }
 
+/* DO NOT USE: Oswald, Arvo, Cherry Cream Soda, Gentium Basic */
+
 body {
     background: #b3dbe8;
     color: #000;
-    font-family: sans-serif; /*   add fonts here   */
+    font-family: Lato, Arial, sans-serif; /*   add fonts here   */
     font-size: 100%; /* DO NOT change */
     margin: 0; /* DO NOT change */
 }
@@ -48,7 +50,7 @@ aside {
 
 h1, h2 {
     margin: 0;
-    font-family: serif;  /*   add fonts here   */
+    font-family: "Bree Serif", "Palatino Linotype", Palatino, serif;  /*   add fonts here   */
 }
 
 article h1 {
@@ -111,3 +113,31 @@ aside a:focus, aside a:hover {
 }
 
 /* media queries */
+
+@media screen and (max-width: 414px) {
+	
+	#top-image-container {
+		display: none;
+		}
+		
+	aside {
+		float: none;
+		width: 100%;
+		margin: 0;
+	}
+	
+	article {
+		width: 100%;
+	}
+	
+	#sidebar2 {
+		margin-top: 0;
+	}
+	
+	#container {
+		margin: 0
+		}
+}
+
+
+
